--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 </head>
 <body>
     <div class="header">
-        Galeria Ślubna Ani i Tomka
+        Galeria Ślubna
+        Maria i Dawid
     </div>
     <div class="gallery" id="gallery"></div>
     <script src="script.js"></script>
